--- a/Oblig1_Oppgave3/WebContent/index.html
+++ b/Oblig1_Oppgave3/WebContent/index.html
@@ -5,18 +5,20 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<div style="width: 748px; height: 151px; position: absolute">
-		<form action="Handle" method="get">
+		<form action="Tempo" method="get">
+		 <fieldset>
+		
 		    <legend>Tempratur omregning</legend>
 		
-			Tempratur <input type="text" name="temp" style="position: relative"><br>
+			<p>Tempratur <input type="text" name="temp" style="position: relative"></p>
+			<br>
 			<br> 
 			<input type="radio" name="valg" value="1" checked="checked"/> Celsius
 			til Fahrenheit<br> <input type="radio" name="valg" value="2" />
 			Fahrenheit til Celsius <br> <input type="submit" value="Regn om">
+		 </fieldset>
 		</form>
 	
-	</div>
 	<br>
 
 </body>
