--- a/Oblig1_Oppgave4/WebContent/index.html
+++ b/Oblig1_Oppgave4/WebContent/index.html
@@ -14,13 +14,13 @@
 			</p>
 			<p>
 				<input type="radio" name="valg" value="1" checked="checked" />
-				Celsius til Fahrenheit
-			</p>
-			<p>
-				<input type="radio" name="valg" value="2" />Fahrenheit til Celsius
-			</p>
-			<p>
-				<input type="submit" value="Regn om">
+				Send og Escape med Apache Commons Lang
+			<br>
+				<input type="radio" name="valg" value="2"  />
+				Send og Escape med egen metode
+			<br>
+ 				<input type="radio" name="valg" value="3" />
+ 				Send uten Escape
 			</p>
 			<p>
 				<input type="submit" value="Send" />
