--- a/Oblig1_Oppgave5/WebContent/stemmeskjema.html
+++ b/Oblig1_Oppgave5/WebContent/stemmeskjema.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Frukt stemme</title>
 </head>
-<body>
-	<form action="stemme" method="Get">
+<body onload="check()">
+	<form action="stemme" method="post">
 		<fieldset>
 			<legend>Favorittfrukt</legend>
 			
@@ -18,9 +18,11 @@
  				Kiwi<input type="radio" name="valg" value="Kiwi" onclick="check()"/>
 			<br>
  				Banan<input type="radio" name="valg" value="Banan"  onclick="check()"/>
+			<br>
+ 				Appelsin<input type="radio" name="valg" value="Appelsin"  onclick="check()"/>
 			</p>
 			<p>
-				<input type="submit" value="stem" id='stem' disabled="disabled" onload="check()"/>
+				<input type="submit" value="stem" id='stem' disabled="disabled"/>
 			</p>
 		</fieldset>
 	</form>
@@ -35,7 +37,6 @@
 		for (var i = 0; i < radios.length && flag==0; i++) {
 			if (radios[i].checked)
 				 flag=1;
-
 		}
 		
 		document.getElementById('stem').disabled=(flag==0)?true:false;
