fikset valuta og regnom i oppgave2

--- a/Oblig1_Oppgave1/WebContent/loginform.html
+++ b/Oblig1_Oppgave1/WebContent/loginform.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Forms</title>
+<title>Insert title here</title>
 </head>
 <body>
-<form action="register" method="get">
+<form action="login" method="post">
   <fieldset>
     <legend>Persondata </legend>
     <p>Fornavn: <input type="text" name="fornavn" /></p>
@@ -16,6 +16,3 @@
 
 </body>
 </html>
-
-
-
