--- a/Oblig1_Oppgave1_LoginServlet/WebContent/loginform.html
+++ b/Oblig1_Oppgave1_LoginServlet/WebContent/loginform.html
@@ -10,6 +10,13 @@
     <legend>Persondata </legend>
     <p>Fornavn: <input type="text" name="fornavn" /></p>
     <p>Etternavn: <input type="text" name="etternavn" /></p>
+        <p>
+        <input type="checkbox" name="language" value="Java" />Java
+        <input type="checkbox" name="language" value="C++" />C++
+        <input type="checkbox" name="language" value="C#" />C#
+        <input type="checkbox" name="language" value="Smalltalk" />Smalltalk
+    </p>    
+    
     <p><input type="submit" value="Send data" /></p>
   </fieldset>
 </form>
